--- a/bigData.ipynb
+++ b/bigData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark import SparkContext, SparkConf"
@@ -25,10 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "conf=SparkConf().setAppName(\"BDProject\").setMaster(\"local[3]\")"
@@ -36,8 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sc=SparkContext(conf=conf)"
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -56,25 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['<?xml version=\"1.0\" encoding=\"utf-8\"?>',\n",
-       " '<badges>',\n",
-       " '  <row Id=\"1\" UserId=\"2\" Name=\"Autobiographer\" Date=\"2011-06-21T20:16:48.910\" Class=\"3\" TagBased=\"False\" />',\n",
+       "['  <row Id=\"1\" UserId=\"2\" Name=\"Autobiographer\" Date=\"2011-06-21T20:16:48.910\" Class=\"3\" TagBased=\"False\" />',\n",
        " '  <row Id=\"2\" UserId=\"3\" Name=\"Autobiographer\" Date=\"2011-06-21T20:16:48.910\" Class=\"3\" TagBased=\"False\" />',\n",
        " '  <row Id=\"3\" UserId=\"4\" Name=\"Autobiographer\" Date=\"2011-06-21T20:16:48.910\" Class=\"3\" TagBased=\"False\" />',\n",
        " '  <row Id=\"4\" UserId=\"6\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.157\" Class=\"3\" TagBased=\"False\" />',\n",
        " '  <row Id=\"5\" UserId=\"8\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.157\" Class=\"3\" TagBased=\"False\" />',\n",
        " '  <row Id=\"6\" UserId=\"9\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.157\" Class=\"3\" TagBased=\"False\" />',\n",
        " '  <row Id=\"7\" UserId=\"10\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"8\" UserId=\"12\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />']"
+       " '  <row Id=\"8\" UserId=\"12\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />',\n",
+       " '  <row Id=\"9\" UserId=\"13\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />',\n",
+       " '  <row Id=\"10\" UserId=\"17\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,47 +83,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def filterOdd(list):\n",
-    "    return [elem for elem in list if list.index(elem) %2==1]"
+    "def cleaning(listIn):\n",
+    "    listOut=[]\n",
+    "    for x in listIn:\n",
+    "        if listIn.index(x)%2==0:\n",
+    "            listOut.append(x.replace(' ','').replace('<','').replace('=',''))\n",
+    "        else:\n",
+    "            listOut.append(x)\n",
+    "    return {listOut[i]:listOut[i+1] for i in range(0,len(listOut)-1,2)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tags=rawTags.filter(lambda x: x.startswith('  <row Id=')).\\\n",
-    "map(lambda x: x.split('\"')).map(filterOdd)"
+    "map(lambda x: x.split('\"')).map(cleaning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['1', '2', 'Autobiographer', '2011-06-21T20:16:48.910', '3', 'False'],\n",
-       " ['2', '3', 'Autobiographer', '2011-06-21T20:16:48.910', '3', 'False'],\n",
-       " ['3', '4', 'Autobiographer', '2011-06-21T20:16:48.910', '3', 'False'],\n",
-       " ['4', '6', 'Autobiographer', '2011-06-21T20:21:49.157', '3', 'False'],\n",
-       " ['5', '8', 'Autobiographer', '2011-06-21T20:21:49.157', '3', 'False'],\n",
-       " ['6', '9', 'Autobiographer', '2011-06-21T20:21:49.157', '3', 'False'],\n",
-       " ['7', '10', 'Autobiographer', '2011-06-21T20:21:49.173', '3', 'False'],\n",
-       " ['8', '12', 'Autobiographer', '2011-06-21T20:21:49.173', '3', 'False'],\n",
-       " ['9', '13', 'Autobiographer', '2011-06-21T20:21:49.173', '3', 'False'],\n",
-       " ['10', '17', 'Autobiographer', '2011-06-21T20:21:49.173', '3', 'False']]"
+       "[{'Class': '3',\n",
+       "  'Date': '2011-06-21T20:16:48.910',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '2',\n",
+       "  'rowId': '1'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:16:48.910',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '3',\n",
+       "  'rowId': '2'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:16:48.910',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '4',\n",
+       "  'rowId': '3'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:21:49.157',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '6',\n",
+       "  'rowId': '4'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:21:49.157',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '8',\n",
+       "  'rowId': '5'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:21:49.157',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '9',\n",
+       "  'rowId': '6'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:21:49.173',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '10',\n",
+       "  'rowId': '7'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:21:49.173',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '12',\n",
+       "  'rowId': '8'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:21:49.173',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '13',\n",
+       "  'rowId': '9'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:21:49.173',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '17',\n",
+       "  'rowId': '10'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,6 +189,15 @@
    "source": [
     "tags.take(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
