--- a/bigData.ipynb
+++ b/bigData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from pyspark import SparkContext, SparkConf"
@@ -23,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "conf=SparkConf().setAppName(\"BDProject\").setMaster(\"local[3]\")"
@@ -32,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -43,77 +47,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "rawTags=sc.textFile(\"travel.stackexchange.com\\Badges.xml\")"
+    "rawBadges=sc.textFile(\"travel.stackexchange.com\\Badges.xml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rawUsers=sc.textFile(\"travel.stackexchange.com\\\\Users.xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['  <row Id=\"1\" UserId=\"2\" Name=\"Autobiographer\" Date=\"2011-06-21T20:16:48.910\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"2\" UserId=\"3\" Name=\"Autobiographer\" Date=\"2011-06-21T20:16:48.910\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"3\" UserId=\"4\" Name=\"Autobiographer\" Date=\"2011-06-21T20:16:48.910\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"4\" UserId=\"6\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.157\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"5\" UserId=\"8\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.157\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"6\" UserId=\"9\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.157\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"7\" UserId=\"10\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"8\" UserId=\"12\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"9\" UserId=\"13\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />',\n",
-       " '  <row Id=\"10\" UserId=\"17\" Name=\"Autobiographer\" Date=\"2011-06-21T20:21:49.173\" Class=\"3\" TagBased=\"False\" />']"
+       "['<?xml version=\"1.0\" encoding=\"utf-8\"?>',\n",
+       " '<users>',\n",
+       " '  <row Id=\"-1\" Reputation=\"1\" CreationDate=\"2011-06-21T15:16:44.253\" DisplayName=\"Community\" LastAccessDate=\"2011-06-21T15:16:44.253\" WebsiteUrl=\"http://meta.stackexchange.com/\" Location=\"on the server farm\" AboutMe=\"&lt;p&gt;Hi, I\\'m not really a person.&lt;/p&gt;&#xA;&#xA;&lt;p&gt;I\\'m a background process that helps keep this site clean!&lt;/p&gt;&#xA;&#xA;&lt;p&gt;I do things like&lt;/p&gt;&#xA;&#xA;&lt;ul&gt;&#xA;&lt;li&gt;Randomly poke old unanswered questions every hour so they get some attention&lt;/li&gt;&#xA;&lt;li&gt;Own community questions and answers so nobody gets unnecessary reputation from them&lt;/li&gt;&#xA;&lt;li&gt;Own downvotes on spam/evil posts that get permanently deleted&lt;/li&gt;&#xA;&lt;li&gt;Own suggested edits from anonymous users&lt;/li&gt;&#xA;&lt;li&gt;&lt;a href=&quot;http://meta.stackexchange.com/a/92006&quot;&gt;Remove abandoned questions&lt;/a&gt;&lt;/li&gt;&#xA;&lt;/ul&gt;&#xA;\" Views=\"0\" UpVotes=\"3147\" DownVotes=\"14237\" AccountId=\"-1\" />']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rawTags.take(10)"
+    "rawUsers.take(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def cleaning(listIn):\n",
-    "    listOut=[]\n",
-    "    for x in listIn:\n",
-    "        if listIn.index(x)%2==0:\n",
-    "            listOut.append(x.replace(' ','').replace('<','').replace('=',''))\n",
-    "        else:\n",
-    "            listOut.append(x)\n",
-    "    return {listOut[i]:listOut[i+1] for i in range(0,len(listOut)-1,2)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tags=rawTags.filter(lambda x: x.startswith('  <row Id=')).\\\n",
+    "def cleaningRDD(RDDIn):\n",
+    "    def cleaning(listIn):\n",
+    "        listOut=[]\n",
+    "        for x in listIn:\n",
+    "            if listIn.index(x)%2==0:\n",
+    "                listOut.append(x.replace(' ','').replace('<','').replace('=',''))\n",
+    "            else:\n",
+    "                listOut.append(x)\n",
+    "        return {listOut[i]:listOut[i+1] for i in range(0,len(listOut)-1,2)}\n",
+    "    return RDDIn.filter(lambda x: x.startswith('  <row Id=')).\\\n",
     "map(lambda x: x.split('\"')).map(cleaning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "badges=cleaningRDD(rawBadges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -124,70 +134,58 @@
        "  'Name': 'Autobiographer',\n",
        "  'TagBased': 'False',\n",
        "  'UserId': '2',\n",
-       "  'rowId': '1'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:16:48.910',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '3',\n",
-       "  'rowId': '2'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:16:48.910',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '4',\n",
-       "  'rowId': '3'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:21:49.157',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '6',\n",
-       "  'rowId': '4'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:21:49.157',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '8',\n",
-       "  'rowId': '5'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:21:49.157',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '9',\n",
-       "  'rowId': '6'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:21:49.173',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '10',\n",
-       "  'rowId': '7'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:21:49.173',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '12',\n",
-       "  'rowId': '8'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:21:49.173',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '13',\n",
-       "  'rowId': '9'},\n",
-       " {'Class': '3',\n",
-       "  'Date': '2011-06-21T20:21:49.173',\n",
-       "  'Name': 'Autobiographer',\n",
-       "  'TagBased': 'False',\n",
-       "  'UserId': '17',\n",
-       "  'rowId': '10'}]"
+       "  'rowId': '1'}]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tags.take(10)"
+    "badges.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "users=cleaningRDD(rawUsers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'AboutMe': \"&lt;p&gt;Hi, I'm not really a person.&lt;/p&gt;&#xA;&#xA;&lt;p&gt;I'm a background process that helps keep this site clean!&lt;/p&gt;&#xA;&#xA;&lt;p&gt;I do things like&lt;/p&gt;&#xA;&#xA;&lt;ul&gt;&#xA;&lt;li&gt;Randomly poke old unanswered questions every hour so they get some attention&lt;/li&gt;&#xA;&lt;li&gt;Own community questions and answers so nobody gets unnecessary reputation from them&lt;/li&gt;&#xA;&lt;li&gt;Own downvotes on spam/evil posts that get permanently deleted&lt;/li&gt;&#xA;&lt;li&gt;Own suggested edits from anonymous users&lt;/li&gt;&#xA;&lt;li&gt;&lt;a href=&quot;http://meta.stackexchange.com/a/92006&quot;&gt;Remove abandoned questions&lt;/a&gt;&lt;/li&gt;&#xA;&lt;/ul&gt;&#xA;\",\n",
+       "  'AccountId': '-1',\n",
+       "  'CreationDate': '2011-06-21T15:16:44.253',\n",
+       "  'DisplayName': 'Community',\n",
+       "  'DownVotes': '14237',\n",
+       "  'LastAccessDate': '2011-06-21T15:16:44.253',\n",
+       "  'Location': 'on the server farm',\n",
+       "  'Reputation': '1',\n",
+       "  'UpVotes': '3147',\n",
+       "  'Views': '0',\n",
+       "  'WebsiteUrl': 'http://meta.stackexchange.com/',\n",
+       "  'rowId': '-1'}]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users.take(1)"
    ]
   },
   {
