--- a/bigData.ipynb
+++ b/bigData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        " '  <row Id=\"-1\" Reputation=\"1\" CreationDate=\"2011-06-21T15:16:44.253\" DisplayName=\"Community\" LastAccessDate=\"2011-06-21T15:16:44.253\" WebsiteUrl=\"http://meta.stackexchange.com/\" Location=\"on the server farm\" AboutMe=\"&lt;p&gt;Hi, I\\'m not really a person.&lt;/p&gt;&#xA;&#xA;&lt;p&gt;I\\'m a background process that helps keep this site clean!&lt;/p&gt;&#xA;&#xA;&lt;p&gt;I do things like&lt;/p&gt;&#xA;&#xA;&lt;ul&gt;&#xA;&lt;li&gt;Randomly poke old unanswered questions every hour so they get some attention&lt;/li&gt;&#xA;&lt;li&gt;Own community questions and answers so nobody gets unnecessary reputation from them&lt;/li&gt;&#xA;&lt;li&gt;Own downvotes on spam/evil posts that get permanently deleted&lt;/li&gt;&#xA;&lt;li&gt;Own suggested edits from anonymous users&lt;/li&gt;&#xA;&lt;li&gt;&lt;a href=&quot;http://meta.stackexchange.com/a/92006&quot;&gt;Remove abandoned questions&lt;/a&gt;&lt;/li&gt;&#xA;&lt;/ul&gt;&#xA;\" Views=\"0\" UpVotes=\"3147\" DownVotes=\"14237\" AccountId=\"-1\" />']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,77 @@
        "  'Name': 'Autobiographer',\n",
        "  'TagBased': 'False',\n",
        "  'UserId': '2',\n",
-       "  'rowId': '1'}]"
+       "  'rowId': '1'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:16:48.910',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '3',\n",
+       "  'rowId': '2'},\n",
+       " {'Class': '3',\n",
+       "  'Date': '2011-06-21T20:16:48.910',\n",
+       "  'Name': 'Autobiographer',\n",
+       "  'TagBased': 'False',\n",
+       "  'UserId': '4',\n",
+       "  'rowId': '3'}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "badges.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2011-06-21T20:16:48.910',\n",
+       " '2011-06-21T20:16:48.910',\n",
+       " '2011-06-21T20:16:48.910',\n",
+       " '2011-06-21T20:21:49.157',\n",
+       " '2011-06-21T20:21:49.157',\n",
+       " '2011-06-21T20:21:49.157',\n",
+       " '2011-06-21T20:21:49.173',\n",
+       " '2011-06-21T20:21:49.173',\n",
+       " '2011-06-21T20:21:49.173',\n",
+       " '2011-06-21T20:21:49.173']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "badges.map(lambda x: x['Date']).take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slownik={'Class': '3','Date': '2011-06-21T20:16:48.910','Name': 'Autobiographer','TagBased': 'False','UserId': '2','rowId': '1'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Class', 'Date', 'Name', 'TagBased', 'UserId', 'rowId'])"
       ]
      },
      "execution_count": 26,
@@ -143,12 +213,33 @@
     }
    ],
    "source": [
-    "badges.take(1)"
+    "slownik.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2011-06-21T20:16:48.910'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=slownik['Date']\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -159,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -179,13 +270,56 @@
        "  'rowId': '-1'}]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "users.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rawVotes=sc.textFile(\"travel.stackexchange.com\\Votes.xml\")\n",
+    "votes=cleaningRDD(rawVotes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'CreationDate': '2011-06-21T00:00:00.000',\n",
+       "  'PostId': '1',\n",
+       "  'VoteTypeId': '2',\n",
+       "  'rowId': '1'},\n",
+       " {'CreationDate': '2011-06-21T00:00:00.000',\n",
+       "  'PostId': '1',\n",
+       "  'VoteTypeId': '2',\n",
+       "  'rowId': '2'},\n",
+       " {'CreationDate': '2011-06-21T00:00:00.000',\n",
+       "  'PostId': '2',\n",
+       "  'VoteTypeId': '2',\n",
+       "  'rowId': '3'}]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "votes.take(3)"
    ]
   },
   {
