--- a/bigData.ipynb
+++ b/bigData.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generalnie kluczowa zmiana od miejsca, gdzie jest napisane !!!!Przełom\n",
+    "po drodze jakieś eksperymenty z ustalaniem typow\n",
+    "Nowa funkcja cleaningRDD3 zmieniająca na DF i jakos sie nie wykrzacza - nie wiem, czy jest wydajna, ale cos robi\n",
+    "\n",
+    "Kolejny etap to co sie da pozamieniac na inty, połaczyć pare tabelek i ułożyć do wszystkiego historię"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
@@ -36,18 +47,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=BDProject, master=local[3]) created by __init__ at <ipython-input-4-38871edff11b>:1 ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-125-38871edff11b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSparkContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\apache-spark\\spark-2.2.0-bin-hadoop2\\spark-2.2.0-bin-hadoop2.7\\python\\pyspark\\context.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[0;32m    113\u001b[0m         \"\"\"\n\u001b[0;32m    114\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_callsite\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_spark_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mCallSite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 115\u001b[1;33m         \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    116\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    117\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
+      "\u001b[1;32mC:\\apache-spark\\spark-2.2.0-bin-hadoop2\\spark-2.2.0-bin-hadoop2.7\\python\\pyspark\\context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[1;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[0;32m    297\u001b[0m                         \u001b[1;34m\" created by %s at %s:%s \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    298\u001b[0m                         % (currentAppName, currentMaster,\n\u001b[1;32m--> 299\u001b[1;33m                             callsite.function, callsite.file, callsite.linenum))\n\u001b[0m\u001b[0;32m    300\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    301\u001b[0m                     \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minstance\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=BDProject, master=local[3]) created by __init__ at <ipython-input-4-38871edff11b>:1 "
+     ]
+    }
+   ],
    "source": [
     "sc=SparkContext(conf=conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 126,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +103,7 @@
        " '  <row Id=\"-1\" Reputation=\"1\" CreationDate=\"2011-06-21T15:16:44.000\" DisplayName=\"Community\" LastAccessDate=\"2011-06-21T15:16:52.063\" Location=\"on the server farm\" AboutMe=\"&lt;p&gt;Hi, I\\'m not really a person.&lt;/p&gt;&#xA;&#xA;&lt;p&gt;I\\'m a background process that helps keep this site clean!&lt;/p&gt;&#xA;&#xA;&lt;p&gt;I do things like&lt;/p&gt;&#xA;&#xA;&lt;ul&gt;&#xA;&lt;li&gt;Randomly poke old unanswered questions every hour so they get some attention&lt;/li&gt;&#xA;&lt;li&gt;Own community questions and answers so nobody gets unnecessary reputation from them&lt;/li&gt;&#xA;&lt;li&gt;Own downvotes on spam/evil posts that get permanently deleted&lt;/li&gt;&#xA;&lt;li&gt;Own suggested edits from anonymous users&lt;/li&gt;&#xA;&lt;li&gt;&lt;a href=&quot;http://meta.stackexchange.com/a/92006&quot;&gt;Remove abandoned questions&lt;/a&gt;&lt;/li&gt;&#xA;&lt;/ul&gt;&#xA;\" Views=\"30\" UpVotes=\"21\" DownVotes=\"17\" Age=\"7\" AccountId=\"-1\" />']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,28 +345,6 @@
    ],
    "source": [
     "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'slownik' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-2d724a9ffaaf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mslownik\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'anyDate'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'%Y-%m-%dT%H:%M:%S'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'slownik' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from datetime import datetime\n",
-    "datetime.strptime(slownik['anyDate'][:-4],'%Y-%m-%dT%H:%M:%S')"
    ]
   },
   {
@@ -594,58 +595,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tu jest trick- trzeba schemat napisać jakąś funkcją, bo jak się okazuje schemat DF nie tworzy się na podstawie najdłuższego wiersza - podchwytliwe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+-------------------+--------------+--------+------+-----+\n",
-      "|Class|               Date|          Name|TagBased|UserId|rowId|\n",
-      "+-----+-------------------+--------------+--------+------+-----+\n",
-      "|    3|2011-06-21 20:16:50|Autobiographer|   False|     2|    1|\n",
-      "|    3|2011-06-21 20:16:50|Autobiographer|   False|     4|    2|\n",
-      "|    3|2011-06-21 20:21:48|Autobiographer|   False|    10|    3|\n",
-      "|    3|2011-06-21 20:21:48|Autobiographer|   False|    17|    4|\n",
-      "|    3|2011-06-21 20:26:48|Autobiographer|   False|     6|    5|\n",
-      "|    3|2011-06-21 20:26:48|Autobiographer|   False|    20|    6|\n",
-      "|    3|2011-06-21 20:31:49|Autobiographer|   False|    19|    7|\n",
-      "|    3|2011-06-21 20:41:49|Autobiographer|   False|    12|    8|\n",
-      "|    3|2011-06-21 20:41:49|Autobiographer|   False|    30|    9|\n",
-      "|    3|2011-06-21 20:56:53|Autobiographer|   False|     8|   10|\n",
-      "|    3|2011-06-21 21:01:53|Autobiographer|   False|    46|   11|\n",
-      "|    3|2011-06-21 21:31:59|Autobiographer|   False|    49|   12|\n",
-      "|    3|2011-06-21 21:36:59|Autobiographer|   False|    55|   13|\n",
-      "|    3|2011-06-21 21:47:04|       Teacher|   False|    10|   14|\n",
-      "|    3|2011-06-21 21:47:04|       Student|   False|     8|   15|\n",
-      "|    3|2011-06-21 21:47:04|     Supporter|   False|    26|   16|\n",
-      "|    3|2011-06-21 22:07:04|Autobiographer|   False|    24|   17|\n",
-      "|    3|2011-06-21 22:32:10|Autobiographer|   False|    34|   18|\n",
-      "|    3|2011-06-21 22:52:10|        Critic|   False|    19|   19|\n",
-      "|    3|2011-06-21 22:52:10|Autobiographer|   False|    74|   20|\n",
-      "+-----+-------------------+--------------+--------+------+-----+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "badgesDF2=badges2.map(lambda x: Row(**x)).toDF()\n",
-    "badgesDF2.show()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
@@ -744,14 +693,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Przełom:-)\n",
+    "!!!!!Przełom:-)\n",
     "\n",
     "Tutaj mamy nową wersje funkcji - z danego RDD robi Data Frame ze stringami na razie, ale radzi sobie ze słownikami z niekompletnymi polami"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -775,7 +724,8 @@
     "            if col not in dictIn.keys():\n",
     "                dictIn[col]=None\n",
     "        return dictIn\n",
-    "    return dictRDD.map(newDict).map(lambda x: Row(**x)).toDF()"
+    "    #nie mam bladego pojęcia dlaczego dziadostwo nie działa bez sampleRatio\n",
+    "    return dictRDD.map(newDict).map(lambda x: Row(**x)).toDF(sampleRatio=100)"
    ]
   },
   {
@@ -826,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +794,7 @@
        "pyspark.sql.dataframe.DataFrame"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1023,6 +973,165 @@
    ],
    "source": [
     "users4.select('DisplayName','Age','Reputation').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test na Tagach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rawTags=sc.textFile(\"travel.stackexchange.com\\Tags.xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tagsDF=cleaningRDD3(rawTags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Count: string (nullable = true)\n",
+      " |-- ExcerptPostId: string (nullable = true)\n",
+      " |-- TagName: string (nullable = true)\n",
+      " |-- WikiPostId: string (nullable = true)\n",
+      " |-- rowId: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tagsDF.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---------+----------+\n",
+      "|Count|  TagName|WikiPostId|\n",
+      "+-----+---------+----------+\n",
+      "|   92|argentina|      2393|\n",
+      "+-----+---------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tagsDF.select('Count','TagName','WikiPostId').where(tagsDF.TagName=='argentina').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test na Comments - początkowo się nie udał :-( ale po ustaleniu sampleRatio=100 znowu sie udalo, tylko nie wiadomo dlaczego"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rawComments=sc.textFile(\"travel.stackexchange.com\\Comments.xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['<?xml version=\"1.0\" encoding=\"utf-8\"?>',\n",
+       " '<comments>',\n",
+       " '  <row Id=\"1\" PostId=\"8\" Score=\"1\" Text=\"Indeed, recommendations in general are off-topic.  [This page](http://travel.stackexchange.com/questions/how-to-ask-beta) lists a couple blog posts that explain exactly why these questions aren\\'t a good fit for the network.\" CreationDate=\"2011-06-21T23:26:02.317\" UserId=\"20\" />']"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rawComments.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comments=cleaningRDD3(rawComments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rawComments.toDF?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- CreationDate: string (nullable = true)\n",
+      " |-- PostId: string (nullable = true)\n",
+      " |-- Score: string (nullable = true)\n",
+      " |-- Text: string (nullable = true)\n",
+      " |-- UserDisplayName: string (nullable = true)\n",
+      " |-- UserId: string (nullable = true)\n",
+      " |-- rowId: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comments.printSchema()"
    ]
   },
   {
